# FlowDesk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_tags_workspace.sql  003_note_fields.sql  004_tasks.sql  005_references.sql  006_plans.sql  007_time_entries.sql  008_workspaces_enhanced.sql  009_cross_workspace_refs.sql  010_advanced_views.sql  011_rebuild_fts.sql  012_recurrence_templates.sql  013_note_versions.sql  014_phase8_settings.sql  015_plan_reminders_muted.sql  016_break_reminder_fields.sql  017_plan_status.sql  018_note_pinned.sql
src-tauri/src/: lib.rs  main.rs  state.rs  test_helpers.rs
src-tauri/src/commands/: activity.rs  demo.rs  dev.rs  discovery.rs  export.rs  filters.rs  hotkey.rs  import.rs  mod.rs  notes.rs  plans.rs  recurrence.rs  references.rs  reminders.rs  search.rs  settings.rs  tasks.rs  templates.rs  time_entries.rs  undo.rs  versions.rs  workspaces.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: discovery.rs  export.rs  import.rs  mod.rs  note.rs  note_version.rs  plan.rs  recurrence.rs  reference.rs  reminder.rs  tag.rs  task.rs  template.rs  time_entry.rs  undo.rs  workspace.rs
src-tauri/src/services/: activity.rs  backup.rs  export.rs  faceted_search.rs  frontmatter.rs  graph.rs  import.rs  mod.rs  recurrence.rs  references.rs  reminders.rs  suggestions.rs  (+3 more)
(+129 files in other folders)
