[package]
name = "flowdesk"
version = "0.8.3"
description = "A unified personal productivity system"
authors = ["FlowDesk"]
edition = "2021"

[lib]
name = "flowdesk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde_yaml = "0.9"
thiserror = "2"
dirs = "5"
hex = "0.4"
regex = "1"
similar = "2"
csv = "1"
walkdir = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
